# hammer-surf-tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  toolchain-mingw64.cmake
.github/workflows/: build.yml  release.yml
src/: anglefix.c  anglefix.h  brushsync.c  brushsync.h  clipper.c  clipper.h  common.c  common.h  config.h  contextmenu.c  contextmenu.h  dll.c  hammerfuncs.c  hammerfuncs.h  hooks.c  hooks.h  hotkeys.c  hotkeys.h  measure.c  measure.h  offsets.c  offsets.h  patterns.c  patterns.h  pch.h  rampgen.c  rampgen.h  rampgenui.c  rampgenui.h  rampgenui.rc  render.c  render.h  scriptfuncs.c  scriptfuncs.h  test-patterns.c  testincludes.c  triggergen.c  triggergen.h  util.c  util.h  (+4 more)
